@@ -3,8 +3,12 @@ require File.dirname(__FILE__) + '/../test_helper'
 class AuthorTest < Test::Unit::TestCase
   fixtures :authors, :articles
 
-  # Replace this with your real tests.
-  def test_truth
-    assert true
+  def setup
+    @author = Author.find(1)
+  end
+
+  def test_authenticate
+    assert_kind_of Author, @author
+    assert_equal(@author, Author.authenticate("araki", "pass"))
   end
 end
