@@ -1,3 +1,7 @@
+2007-12-25  ARAKI Yasuhiro  <ar@debian.org>
+
+	* test/unit/author_test.rb (AuthorTest::test_authenticate): New test method.
+
 2007-12-23  ARAKI Yasuhiro  <ar@debian.org>
 
 	* lib/workers/pingger_worker.rb (PinggerWorker::create): Fix to use defer_seconds
